testdata/baselines/reference/submodule/compiler/isolatedModules_resolveJsonModule.errors.txt
/a.ts(1,20): error TS2307: Cannot find module './j.json' or its corresponding type declarations.


==== /a.ts (1 errors) ====
    import j = require("./j.json");
                       ~~~~~~~~~~
!!! error TS2307: Cannot find module './j.json' or its corresponding type declarations.
    
==== /j.json (0 errors) ====
    {}
    